<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhaseIII</string>
    <string name="action_settings">Settings</string>
	<string name="usernamehint">Username</string>
    <string name="passhint">Password</string>
    <string name="login">Log In</string>
    <string name="register">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="healthcard">Healthcard Number</string>
    <string name="temp">Temperature (Celsius)</string>
    <string name="hr">Heart Rate</string>
    <string name="bps">Blood Pressure (Sys)</string>
    <string name="bpd">Blood Pressure (Dia)</string>
    <string name="dob">mm/dd/yyyy</string>
    <string name="dobinfo">Birthdate: mm/dd/yyyy</string>
    <string name="registration">Patient Registration</string>
    <string name="save">Save Patient</string>
    <string name="updatetitle">Update Patient Information</string>
    <string name="changes">Save Changes</string>
    <string name="txt">Text</string>
    <string name="largetxt">Large Text</string>
    <string name="symptoms">Symptoms</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="sdh">Symptoms Description Here</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="reg">Register</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="epd">Edit Personal Data</string>
    <string name="eta">Arrival Time:</string>
    <string name="lvl">Level:</string>
    <string name="viewsymptoms">View All Symptoms:</string>
    <string name="tsbd">Time Seen by Doctor: :</string>
    <string name="zero">0</string>
    <string name="vavs">View Vital Signs</string>
    <string name="back">Back</string>
    <string name="urgencylist">Urgency List</string>
    <string name="ppd">Patient Personal Data</string>
    <string name="addsymptoms">Add Symptoms</string>
    <string name="addpatient">Add Patient</string>
    
    <string name="authors">By Andy Sheng, Andy Li, Sujan Karunananthan, Brandon Ramoudith</string>
    <string name="viewall">View All</string>

</resources>
