<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_healthcard_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/hr"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:ems="10"
         android:hint="@string/bps"
         android:inputType="number" />

    <EditText
        android:id="@+id/dialog_healthcard_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="63dp"
        android:ems="10"
       	android:hint="@string/temp"
       	android:inputType="number" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/bpd"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/find_patient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginRight="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/landscape_view_symptoms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/find_patient_button"
        android:layout_alignBottom="@+id/find_patient_button"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/find_patient_button"
        android:text="@string/cancel" />

</RelativeLayout>
