<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/add_symptom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cancel_symptom_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/cancel_symptom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="48dp"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/current_time_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txt"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />

    <EditText
        android:id="@+id/symtom_description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/current_time_field"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/sdh"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
