<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/landscape_patient_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/urgencylist"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/landscape_patient_name_field"
        android:layout_marginTop="18dp"
        android:minHeight="450px" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:minWidth="100dp"
        android:onClick="openListAll"
        android:text="@string/viewall" />

    <Button
        android:id="@+id/add_symptom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:minWidth="100dp"
        android:onClick="addNewPatient"
        android:text="@string/add" />

    <EditText
        android:id="@+id/author_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/view_button"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/authors"
        android:textSize="8sp" />

</RelativeLayout>